Twenty Fourteen: add `min-height` rule to the WP toolbar to ensure that no gap appears in pre-3.8 versions. Props celloexpressions, fixes #25906. Built from https://develop.svn.wordpress.org/trunk@26569
git-svn-id: http://core.svn.wordpress.org/trunk@26460 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfourteen/style.css
+++ b/wp-content/themes/twentyfourteen/style.css
@@ -816,6 +816,12 @@ span + .edit-link:before,
  * -----------------------------------------------------------------------------
  */
 
+/* Ensure that there is no gap between the header and 
+   the admin bar for WordPress versions before 3.8. */
+#wpadminbar {
+	min-height: 32px;
+}
+
 #site-header {
 	position: relative;
 	z-index: 3;
